# plnn

./: .gitignore  Makefile  README.md  environment-cuda.yml  environment.yml  pyproject.toml  setup.py
analysis/: gen_analysis_images.sh  gen_bifurcation_images.sh  transition_rate_study_analysis_script.py
cont/: __init__.py  binary_choice.py  binary_flip.py  continuation.py  fold_curves.py  plnn_bifurcations.py
continuation/: __init__.py  binary_choice.py  binary_flip.py  continuation.py
figures/: fig1.mplstyle  figure1.py  get_fig5_facs.sh  get_fig6_facs.sh  make_figure1.py  make_figure2.py  make_figure3.py  make_figure3a.py  make_figure3b.py  make_figure4.py  make_figure5.py  make_figure5a.py  make_figure6.py  make_figure6b.py  make_figure_binary_choice.py  make_figure_binary_flip.py  make_figure_model_evaluation.py  make_figure_s1.py  make_figure_sampling_rate.py  make_figure_signal_priors.py  make_figure_transition_study.py  run_make_figure_s1.sh
notebooks/: applet_bifurcation.ipynb  applet_bifurcation_facs.ipynb  applet_bifurcation_quadratic.ipynb  nb_ani_demo_phi1.ipynb  nb_ani_demo_phi2.ipynb  nb_ani_demo_phi3.ipynb  nb_eval_model_algbindec.ipynb  nb_eval_model_facs.ipynb  nb_eval_model_plnn_synbindec.ipynb  nb_eval_model_quadratic.ipynb  nb_evaluation_model_phi1_1a_v1_20240311_130654.ipynb  nb_evaluation_model_phi1_1a_v_mmd1_20240520_124240.ipynb  nb_evaluation_model_phiq.ipynb  nb_evaluation_model_transition1_pcs123_v1_20240606_200424.ipynb  nb_evaluation_model_transition1_v1_20240606_192100.ipynb  nb_evaluation_model_transition2_v1_20240606_193458.ipynb  nb_facs_training_data.ipynb  nb_generate_3d_data.ipynb  nb_model_testing.ipynb  nb_model_testing.py  nb_phi1_evol_demo_with_bifcurves.ipynb  nb_phi1_evol_demo_wo_bifcurves.ipynb  nb_phi2_evol_demo_with_bifcurves.ipynb  nb_phi2_evol_demo_wo_bifcurves.ipynb  nb_plot_evaluation_data_facs.ipynb  nb_plot_evaluation_data_plnn_synbindec.ipynb  nb_signal_coverage_phi1.ipynb  nb_signal_coverage_phi2.ipynb  nb_synthetic_dataset_preview.ipynb  nb_test_model_facs.ipynb  nb_test_model_synbindec.ipynb
plnn/: __main__.py  dataset.py  helpers.py  loss_functions.py  main.py  model_training.py  model_training_vae.py  optimizers.py  schedulers.py  vectorfields.py
scripting/: _run_all_nb_eval_model_script.sh  _run_all_nb_test_model_script.sh  arglist_nb_eval_model_algbindec.tsv  arglist_nb_eval_model_facs.tsv  arglist_nb_eval_model_plnn_synbindec.tsv  arglist_nb_eval_model_quadratic.tsv  arglist_nb_test_model_facs.tsv  (+10 more)
tests/: benchmark.py  (+17 more)
(+149048 files in other folders)
