[build-system]
requires = ["setuptools>=61.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "plnn"
dynamic = ["version"]
requires-python = ">= 3.9"
readme = "README.md"
license = { file = "LICENSE" }
description = "A machine learning approach to parameterized landscapes"
authors = [
  {name = "Addison Howe"},
]

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "node-and-date"
write_to = "src/plnn/_version.py"

[project.scripts]
plnn = "plnn.__main__:main"
model_eval = "plnn.eval.__main__:main"
generate_data = "plnn.data_generation.__main__:main"

# -------------------------------------------------------------------
# Environment configuration metadata (for humans + tools)
# -------------------------------------------------------------------
[tool.plnn.env]
default = "environment.yml"
cuda = "environment-cuda.yml"

[tool.plnn.env.commands]
create_default = "conda env create -p ./env -f environment.yml"
create_cuda = "conda env create -p ./env -f environment-cuda.yml"
activate = "conda activate ./env"

[tool.plnn.notes]
usage = """
Use 'environment.yml' for CPU or minimal installs.
Use 'environment-cuda.yml' for GPU setups with CUDA 12.4 support.

Example commands:
  conda env create -p ./env -f environment.yml
  conda env create -p ./env -f environment-cuda.yml
  conda activate ./env
"""
